<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ptsd" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardUserN"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="360dp"
            app:cardCornerRadius="12dp">


            <EditText
                android:id="@+id/userName"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:hint="@string/UserN"
                android:background="@drawable/custominput"
                android:drawableStart="@drawable/custome_email_icon"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black">

            </EditText>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPassword"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="430dp"
            app:cardCornerRadius="12dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:autofillHints=""
                android:hint="@string/password"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:drawableStart="@drawable/custom_lock_icon"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black">

            </EditText>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_below="@+id/cardPassword"
            android:layout_marginStart="120dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btn"
            android:textColor="@color/white">

        </Button>



        <TextView
            android:id="@+id/tv"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_below="@+id/btn"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/password1"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv"
            android:layout_marginTop="30dp"
            android:layout_marginStart="100dp"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="17sp">

        </TextView>

        <TextView
            android:id="@+id/signup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv"
            android:layout_marginTop="30dp"
            android:layout_marginStart="293dp"
            android:text="@string/signup1"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold">

        </TextView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_marginTop="645dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
    </RelativeLayout>

</RelativeLayout>