<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="-60dp"
        app:srcCompat="@drawable/ptsd" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cUname"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="280dp"
        app:cardCornerRadius="12dp">

        <EditText
            android:id="@+id/uName"
            android:layout_width="200dp"
            android:layout_height="58dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custominput"
            android:drawableStart="@drawable/custom_user_name_icon"
            android:hint="@string/uName"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:importantForAutofill="no">
        </EditText>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cEmail"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/cUname"
        android:layout_marginTop="20dp"
        android:layout_marginStart="115dp"
        app:cardCornerRadius="12dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="59dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:hint="@string/UserN"
            android:background="@drawable/custominput"
            android:drawableStart="@drawable/custome_email_icon"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:importantForAutofill=""
            android:autofillHints="">
        </EditText>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cCity"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/cEmail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="115dp"
        app:cardCornerRadius="12dp">

        <EditText
            android:id="@+id/city"
            android:layout_width="200dp"
            android:layout_height="58dp"
            android:gravity="center_horizontal"
            android:hint="@string/city"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:importantForAutofill=""
            android:autofillHints="">
        </EditText>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cPhone"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/cCity"
        android:layout_marginTop="20dp"
        android:layout_marginStart="115dp"
        app:cardCornerRadius="12dp">

        <EditText
            android:id="@+id/Phone"
            android:layout_width="200dp"
            android:layout_height="58dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custominput"
            android:drawableStart="@drawable/custom_phone_icon"
            android:hint="@string/Phone"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:importantForAutofill=""
            android:autofillHints="">
        </EditText>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cPassw"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/cPhone"
        android:layout_marginTop="20dp"
        android:layout_marginStart="115dp"
        app:cardCornerRadius="12dp">

        <EditText
            android:id="@+id/passw"
            android:layout_width="200dp"
            android:layout_height="57dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:drawableStart="@drawable/custom_lock_icon"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:autofillHints="">

        </EditText>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cSup"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_below="@+id/cPassw"
        android:layout_marginTop="20dp"
        android:layout_marginStart="145dp"
        app:cardCornerRadius="62dp">


        <Button
            android:id="@+id/Sup"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/sup">

        </Button>

    </androidx.cardview.widget.CardView>


</RelativeLayout>